--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ input[type="number"] {
   width: 250px;
 }
 
-.CitySearch {
+.citySearch {
   display: flex;
   flex-direction: column;
   flex-basis: 300px;
@@ -52,12 +52,13 @@ input[type="number"] {
 }
 
 .suggestions {
-  width: 250px;
+  width: 215px;
   position: absolute;
   z-index: 2;
   align-self: center;
   margin: 0;
-  top: 43px;
+  top: 65px;
+  left: (50% - 125px);
   font-size: 14px;
   box-shadow: 10px 10px 16px -12px rgba(0, 0, 0, 0.75);
 }
